--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -5,7 +5,7 @@ body {
 
 body {
   padding-top: 56px;
-  background-color: #f5f7fb !important;
+  background-color: #000000 !important;
 }
 
 @media (max-width: 991.98px) {
@@ -29,7 +29,7 @@ body {
 }
 
 .nav-scroller .nav {
-  color: rgba(255, 255, 255, .75);
+  color: rgba(236, 20, 20, 0.75);
 }
 
 .nav-scroller .nav-link {
@@ -69,7 +69,7 @@ body {
 .b-example-divider {
   width: 100%;
   height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(0, 0, 0, 0.959);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
   box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
@@ -124,18 +124,18 @@ body {
   z-index: 1500;
 }
 .public-position{
-  border: 1px solid #fff;
+  border: 1px solid #0ce760;
   border-radius: 3px;
 }
 
 .public-position:hover{
-  background-color: #f5f7fb;
+  background-color: #185de6;
   color: #000 !important;
 }
 
 .container {
   padding: 20px;
-  background: white;
+  background: rgb(255, 255, 255);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   box-shadow: 0px 0px 6px #888;
@@ -143,7 +143,7 @@ body {
 }
 
 footer {
-  background: white;
+  background: rgb(228, 7, 7);
   padding: 10px 0px;
   margin: auto;
   text-align: center;
@@ -168,7 +168,7 @@ footer p {
 }
 
 .share-copy-icon {
-  background-color: #72869c;
+  background-color: #1864b4;
   border-color: #72869c;
   padding: 5px;
   border-radius: 5px;
